--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "framework"]
 	path = framework
-	url = git@github.com:OpenMotorDrive/framework.git
+	url = git@github.com:CubePilot/framework.git
