--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -14,6 +14,8 @@ jobs:
     - uses: actions/checkout@v2
       with: 
         submodules: recursive
+    - name: apt-get
+      run: apt-get update
     - name: comp
       run: mkdir Tools && mkdir Tools/completion && cd Tools/completion && wget https://github.com/ArduPilot/ardupilot/raw/master/Tools/completion/completion.bash
     - name: stup
