--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -17,7 +17,13 @@ jobs:
     - name: apt-get
       run: sudo apt-get update
     - name: comp
-      run: mkdir Tools && mkdir Tools/completion && cd Tools/completion && wget https://github.com/ArduPilot/ardupilot/raw/master/Tools/completion/completion.bash && mkdir bash && cd bash && wget https://github.com/ArduPilot/ardupilot/raw/master/Tools/completion/bash/_waf
+      run: |
+        mkdir Tools && mkdir Tools/completion && cd Tools/completion && \
+        wget https://github.com/ArduPilot/ardupilot/raw/master/Tools/completion/completion.bash && mkdir bash && \
+        cd bash && wget https://github.com/ArduPilot/ardupilot/raw/master/Tools/completion/bash/_waf && \
+        wget https://github.com/ArduPilot/ardupilot/raw/master/Tools/completion/bash/_sim_vehicle && \
+        wget https://github.com/ArduPilot/ardupilot/raw/master/Tools/completion/bash/_ap_autotest && \
+        wget https://github.com/ArduPilot/ardupilot/raw/master/Tools/completion/bash/_ap_bin
     - name: stup
       run: mkdir Tools/environment_install && cd Tools && cd environment_install && wget https://github.com/ArduPilot/ardupilot/raw/master/Tools/environment_install/install-prereqs-ubuntu.sh && bash ./install-prereqs-ubuntu.sh -y
     - name: deploy
