--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -15,11 +15,34 @@ jobs:
       with: 
         submodules: recursive
     - name: comp
-      run: mkdir Tools && mkdir Tools/completion && cd Tools/completion && wget https://github.com/ArduPilot/ardupilot/raw/master/Tools/completion/completion.bash
-    - name: stup
-      run: mkdir Tools/environment_install && cd Tools && cd environment_install && wget https://github.com/ArduPilot/ardupilot/raw/d7018a2ba0565c303ce133a0088ccd8d1ac85e3c/Tools/environment_install/install-prereqs-ubuntu.sh && bash ./install-prereqs-ubuntu.sh -y
+      run: |
+        set -e -x
+        sudo apt-get update
+        sudo apt install python2
+        curl https://bootstrap.pypa.io/pip/2.7/get-pip.py --output get-pip.py
+        sudo python2 get-pip.py
+        mkdir Tools && mkdir Tools/completion && cd Tools/completion && wget https://github.com/ArduPilot/ardupilot/raw/master/Tools/completion/completion.bash
+        OPT="/opt"
+        cd $OPT
+        echo "Installing toolchain for STM32 Boards"
+        echo "Downloading from ArduPilot server"
+        sudo wget --progress=dot:giga https://firmware.ardupilot.org/Tools/STM32-tools/gcc-arm-none-eabi-6-2017-q2-update-linux.tar.bz2
+        echo "Installing..."
+        sudo chmod -R 777 gcc-arm-none-eabi-6-2017-q2-update-linux.tar.bz2
+        sudo tar xjf gcc-arm-none-eabi-6-2017-q2-update-linux.tar.bz2
+        echo "... Cleaning"
+        sudo rm gcc-arm-none-eabi-6-2017-q2-update-linux.tar.bz2
+        SHELL_LOGIN=".profile"
+        exportline="export PATH=$OPT/$ARM_ROOT/bin:\$PATH";
+        echo $exportline >> ~/$SHELL_LOGIN
       env:
-        USER: github
+        ARM_ROOT: gcc-arm-none-eabi-6-2017-q2-update
+    - name: stup
+      run: mkdir Tools/environment_install && cd Tools && cd environment_install && wget https://github.com/ArduPilot/ardupilot/raw/master/Tools/environment_install/install-prereqs-ubuntu.sh && bash ./install-prereqs-ubuntu.sh -y
+      env:
+        SKIP_AP_COMPLETION_ENV: 1
+        DO_AP_STM_ENV: 0
+        ARM_ROOT: gcc-arm-none-eabi-6-2017-q2-update
     - name: deploy
       run: source ~/.profile && chmod 777 ./deploy.sh && ./deploy.sh
     - name: Upload a Build Artifact
@@ -29,3 +52,4 @@ jobs:
         name: firmwares
         # A file, directory or wildcard pattern that describes what to upload
         path: deploy
+        
